# dylifo

./: .gitignore  README.md  config.toml  demo.py  dylifo.py  entmap.json  pyproject.toml  shaping.json  shaping.md  stream.py  sz.py
.github/: dependabot.yml
data/: get.json  get1.json  get100003.json  get5.json  how1.json  why1-16.json
docs/: sz_ai.graffle
dylifo/: __init__.py  mask.py  prof.py  summary.py
sz/: __init__.py  summary.py
